--- a/graficos/cnvas/canva.html
+++ b/graficos/cnvas/canva.html
@@ -28,6 +28,8 @@
 <body onload="D();">
     <canvas id="myChart" width="400" height="400">
     </canvas>
+    <span style="margin-left: -400px">Insira abaixo o valor e o nome da fatia a ser adicionada.</span>
+    <br>
     <input class="item" type="text" placeholder="valor">
     <input class="nome" type="text" placeholder="nome">
     <button onclick="adicionafatia()">Adicionar Fatia</button>
