Iniciado transformacao do canvas em objeto

--- a/graficos/objeto/objeto.html
+++ b/graficos/objeto/objeto.html
@@ -32,7 +32,7 @@
     <br>
     <input class="item" type="text" placeholder="valor">
     <input class="nome" type="text" placeholder="nome">
-    <button onclick="novafatia()">Adicionar Fatia</button>
+    <button onclick="fatia()">Adicionar Fatia</button>
 </body>
 
 
