--- a/graficos/objeto/objeto.html
+++ b/graficos/objeto/objeto.html
@@ -22,17 +22,26 @@
             height: 20px;
             margin: 5px;
         }
+
+        #mychart:hover {
+            color: green;
+            background-color: brown;
+        }
+        
     </style>
 </head>
 
-<body onload="context(),pizza.push(new fatia.construtor())">
-    <canvas id="myChart" width="400" height="400">
-    </canvas>
+<body onload="
+    context(),
+    pizza.push(new fatia(0,'base')),
+    cansado();
+">
+    <canvas id="myChart" width="400" height="400"></canvas>
     <span style="margin-left: -400px">Insira abaixo o valor e o nome da fatia a ser adicionada.</span>
     <br>
     <input class="item" type="text" placeholder="valor">
     <input class="rotulo" type="text" placeholder="nome">
-    <button onclick="adicionarFatia()">Adicionar Fatia</button>
+    <button onclick="adicionarFatia('valor','nome')">Adicionar Fatia</button>
 </body>
 
 
