ajustando offset, e exclusão da fatia base

--- a/graficos/sandboxConcretada/index.html
+++ b/graficos/sandboxConcretada/index.html
@@ -17,10 +17,7 @@
     </style>
 </head>
 
-<body onload="
-pizza.push(new Fatia(0,'base')),
-cansado();
-">
+<body onload="cansado();">
   <div id="concreteContainer">
   </div>
   
